# cpsc-5800-vision-rl

./: .gitignore  EVALUATION_GUIDE.md  README.md  download_models.py  pyproject.toml  train_run1.sh  train_run2.sh
experiment_run_scripts/: pickCube.sh  pushCube.sh  pushT.sh
src/: custom_env.py  evaluate_model.py  feature_extractor.py  train_ppo.py  visualize_observation.py
